# dpsn-jax

./: .gitignore  README.md  check_1b_size.py  debug_optax.py  debug_params.py  generate.py  main.py  pyproject.toml  train.py
configs/: config.yaml  config_1b.yaml  config_large.yaml
data/: vocab.json
docs/: DPSN_Concept_Overview.md  DPSN_Research_Paper.tex
src/dpsn/: attention.py  config.py  data.py  dpsn_layer.py  inference.py  model.py  router.py  train.py
src/dpsn_jax/: dpsn_flax.py  run_cpu_test.py  sharding.py  train_full.py  train_jax.py  train_shakespeare.py  train_sharded.py  verify_tpu.py
tests/: conftest.py  test_dpsn.py  test_dpsn_flax.py  test_tpu_compatibility.py  test_training.py
