[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dpsn-jax"
version = "0.1.0"
description = "JAX/Flax implementation of Dynamic Parameter Selection Network (DPSN-R)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenCode Team"}
]
dependencies = [
    "jax[tpu]>=0.4.35",
    "flax>=0.8.0",
    "optax>=0.1.7",
    "orbax-checkpoint>=0.5.0",
    "transformers>=4.30.0",
    "datasets>=2.18.0",
    "tensorboard>=2.14.0",
    "torch", # Needed for tensorboard SummaryWriter currently
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dpsn_jax"]
